--- a/Src/ModuleServer/test.html
+++ b/Src/ModuleServer/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -7,11 +7,10 @@
   </head>
   <body>
     <form id="f">
-          <div id="usernamediv">
-                <label>Username</label>
-                <input type="text" name="username">
-          </div>
-          <button type="submit">Submit</button>
+
+          <input type="text" name="username">
+
+          <input type="submit" value="Inscription">
     </form>
 
     <script type="text/javascript" src="test.js"></script>
