Script fonctionnant pour la générationde plan à partir d'un svg

--- a/Src/ModuleServer/Plans/HtmlFinalVersion/Superplan.html
+++ b/Src/ModuleServer/Plans/HtmlFinalVersion/Superplan.html
@@ -7,26 +7,19 @@
   </header>
 
   
+    <nav>
+      <a href="#" class="button_return">Blabla</a>
+      <label href="#" class="name_plan">Plan</label>
+    </nav>
+    <div id="container_div_plan">
+      <div id="main_plan">
 
-    <div id="main_plan">
-
-    <svg height="101.28613mm" id="svg8" inkscape:version="0.92.3 (2405546, 2018-03-11)" sodipodi:docname="Plantest.svg" version="1.1" viewbox="0 0 111.94395 101.28613" width="111.94395mm" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg">
-  <defs id="defs2"></defs>
-  <namedview bordercolor="#666666" borderopacity="1.0" fit-margin-bottom="0" fit-margin-left="0" fit-margin-right="0" fit-margin-top="0" id="base" inkscape:current-layer="layer1" inkscape:cx="291.18766" inkscape:cy="116.10153" inkscape:document-units="mm" inkscape:pageopacity="0.0" inkscape:pageshadow="2" inkscape:window-height="837" inkscape:window-maximized="1" inkscape:window-width="1600" inkscape:window-x="-8" inkscape:window-y="-8" inkscape:zoom="0.92111027" pagecolor="#ffffff" showgrid="false"></namedview>
-  <metadata id="metadata5">
-    <rdf>
-      <work rdf:about="">
-        <format>image/svg+xml</format>
-        <type rdf:resource="http://purl.org/dc/dcmitype/StillImage"></type>
-        <title></title>
-      </work>
-    </rdf>
-  </metadata>
-  <g id="layer1" inkscape:groupmode="layer" inkscape:label="Calque 1" transform="translate(-16.108627,-87.611313)">
-    <rect class="empty" height="64.788406" id="Chambre_3" inkscape:label="Chambre_3" onclick="change_state(this);" style="opacity:1;fill:#c35181;fill-opacity:1;stroke:#846572;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="33.375847" x="17.108627" y="88.611313"></rect>
-    <rect class="empty" height="54.411041" id="Chambre_2" inkscape:label="Chambre_2" onclick="change_state(this);" style="opacity:1;fill:#c35181;fill-opacity:1;stroke:#846572;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="58.898548" x="68.154037" y="121.14575"></rect>
-    <rect class="empty" height="14.303933" id="Chambre_1" inkscape:label="Chambre_1" onclick="change_state(this);" style="opacity:1;fill:#c35181;fill-opacity:1;stroke:#846572;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="35.33913" x="17.950035" y="173.59351"></rect>
-  </g>
+      <svg height="101.28613mm" id="svg8" inkscape:version="0.92.3 (2405546, 2018-03-11)" sodipodi:docname="Plantest.svg" version="1.1" viewbox="0 0 111.94397 101.28612" width="111.94396mm" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg">
+
+  <rect class="empty" height="64.788406" id="Chambre" inkscape:label="Chambre" onclick="change_state(this);" style="opacity:1;fill-opacity:1;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="33.375847" x="1" y="1"></rect>
+  <rect class="empty" height="54.411041" id="rect3" inkscape:label="Chambre" onclick="change_state(this);" style="opacity:1;fill-opacity:1;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="58.898548" x="52.045414" y="33.534439"></rect>
+  <rect class="empty" height="14.303933" id="rect5" inkscape:label="Chambre" onclick="change_state(this);" style="opacity:1;fill-opacity:1;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="35.33913" x="1.8414078" y="85.982193"></rect>
 </svg></div>
+    </div>
   
 </body></html>
