--- a/Src/ModuleServer/Plans/PlanSqueletteHTML.html
+++ b/Src/ModuleServer/Plans/PlanSqueletteHTML.html
@@ -7,9 +7,14 @@
   </header>
 
   <body>
+    <nav>
+      <a href="#" class="button_return">Blabla</a>
+      <label href="#" class="name_plan">Plan</label>
+    </nav>
+    <div id="container_div_plan">
+      <div id="main_plan">
 
-    <div id="main_plan">
-
+      </div>
     </div>
   </body>
 </html>
