Ajout d'éléments css et amélioration du design

--- a/Src/ModuleServer/Plans/HtmlFinalVersion/Superplan.html
+++ b/Src/ModuleServer/Plans/HtmlFinalVersion/Superplan.html
@@ -8,7 +8,7 @@
 
   
     <nav>
-      <a href="#" class="button_return">Blabla</a>
+      <a href="#" class="button_return"> <img src="../../Icones/fleche.svg"> </a>
       <label href="#" class="name_plan">Plan</label>
     </nav>
     <div id="container_div_plan">
@@ -16,9 +16,9 @@
 
       <svg height="101.28613mm" id="svg8" inkscape:version="0.92.3 (2405546, 2018-03-11)" sodipodi:docname="Plantest.svg" version="1.1" viewbox="0 0 111.94397 101.28612" width="111.94396mm" xmlns="http://www.w3.org/2000/svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg">
 
-  <rect class="empty" height="64.788406" id="Chambre" inkscape:label="Chambre" onclick="change_state(this);" style="opacity:1;fill-opacity:1;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="33.375847" x="1" y="1"></rect>
-  <rect class="empty" height="54.411041" id="rect3" inkscape:label="Chambre" onclick="change_state(this);" style="opacity:1;fill-opacity:1;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="58.898548" x="52.045414" y="33.534439"></rect>
-  <rect class="empty" height="14.303933" id="rect5" inkscape:label="Chambre" onclick="change_state(this);" style="opacity:1;fill-opacity:1;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="35.33913" x="1.8414078" y="85.982193"></rect>
+  <rect class="vide" height="64.788406" id="Chambre" inkscape:label="Chambre" onclick="change_state(this);" style="opacity:1;fill-opacity:1;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="33.375847" x="1" y="1"></rect>
+  <rect class="vide" height="54.411041" id="rect3" inkscape:label="Chambre" onclick="change_state(this);" style="opacity:1;fill-opacity:1;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="58.898548" x="52.045414" y="33.534439"></rect>
+  <rect class="vide" height="14.303933" id="rect5" inkscape:label="Chambre" onclick="change_state(this);" style="opacity:1;fill-opacity:1;stroke-width:2;stroke-linecap:round;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;paint-order:normal" width="35.33913" x="1.8414078" y="85.982193"></rect>
 </svg></div>
     </div>
   
