--- a/Src/ModuleServer/Plans/PlanSqueletteHTML.html
+++ b/Src/ModuleServer/Plans/PlanSqueletteHTML.html
@@ -8,7 +8,7 @@
 
   <body>
     <nav>
-      <a href="#" class="button_return">Blabla</a>
+      <a href="#" class="button_return"> <img src="../../Icones/fleche.svg" > </a>
       <label href="#" class="name_plan">Plan</label>
     </nav>
     <div id="container_div_plan">
