correctifs sur l'affichage des images et l'envoi des MIME

--- a/Src/ModuleServer/Plans/HtmlFinalVersion/Superplan.html
+++ b/Src/ModuleServer/Plans/HtmlFinalVersion/Superplan.html
@@ -5,8 +5,8 @@
   </header>
 
     <nav>
-      <a href="" class="button_return" onclick="send();"> <img src="fleche.png"> </a>
-      <label href="#" class="name_plan">Plan</label>
+      <a href="" class="button_return" onclick="send();"> <img src="../../Icones/fleche.png"> </a>
+      <label href="#" class="name_plan">SuperPlan</label>
     </nav>
     <div id="container_div_plan">
       <div id="main_plan">
