--- a/Src/ModulePageWeb/HomePage.html
+++ b/Src/ModulePageWeb/HomePage.html
@@ -50,13 +50,12 @@
 
 <h2> Plans </h2>
 
-<svg width="10cm" height="10cm">
+<div class="container1">
+  <a href="Test.html"> <img src="Test3.png" height="100%" width="100%" ></a>
+</div> 
 
- <rect x="100" y="100" width="50mm" height="50mm"
-          style="stroke: #000000; fill: none;" />
- <rect x="100" y="100" width="50mm" height="50mm"
-          style="stroke: #000000; fill: none;" />
- <rect x="100" y="100" width="50mm" height="50mm"
-          style="stroke: #000000; fill: none;" />
+<div class="container2">
+  <a href="Test.html"> <img src="Test3.png" height="100%" width="100%" ></a>
+</div> 
 
-</svg>
+<Credit> Site realisé Par Remis Laramas Et Arthur Charbonnier </Credit>
