--- a/Src/ModulePageWeb/HomePage.html
+++ b/Src/ModulePageWeb/HomePage.html
@@ -39,7 +39,7 @@
 </html> 
 
 
-<h1> Pourgagnerdelatune.exe </h1>
+<h1> Hospit-Assist </h1>
 
 <ul>
   <li><a  class="active" href="#Home-Page">Home-PageGlobale</a></li>
@@ -57,5 +57,7 @@
 <div class="container2">
   <a href="Test.html"> <img src="Test3.png" height="100%" width="100%" ></a>
 </div> 
+
+<h3> Ce site est realisé dans l'objectif D'aider les personnels soignant dans un contexte De crise sanitaire et medical a l'international , Et Pour une optomisition du temps et des moyens maximal a l'aide et au soutient des ces personnels contre leur epuisement dans les moindres mesures de cette crises . </h3>
 
 <Credit> Site realisé Par Remis Laramas Et Arthur Charbonnier </Credit>
